<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignInActivity">

    <TextView
        android:id="@+id/sign_in_textView"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:background="@color/white"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="0dp" />

    <ImageView
        android:id="@+id/sign_page_imageview"
        android:layout_width="230dp"
        android:layout_height="210dp"
        android:layout_marginTop="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@drawable/sign_in_page_logo" />

    <TextView
        android:id="@+id/sign_in_description_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/description_name"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/sign_in_input_name"
        app:layout_constraintStart_toStartOf="@+id/sign_in_input_name" />

    <EditText
        android:id="@+id/sign_in_input_name"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="30dp"
        android:ems="10"
        android:hint="@string/hint_name"
        android:inputType="text"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sign_in_textView" />

    <TextView
        android:id="@+id/sign_in_description_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/description_id"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/sign_in_input_id"
        app:layout_constraintStart_toStartOf="@+id/sign_in_input_id" />

    <EditText
        android:id="@+id/sign_in_input_id"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="30dp"
        android:ems="10"
        android:hint="@string/hint_id"
        android:inputType="text"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sign_in_input_name" />
    <TextView
        android:id="@+id/sign_in_description_pw"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/description_pw"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/sign_in_input_pw"
        app:layout_constraintStart_toStartOf="@+id/sign_in_input_pw" />

    <EditText
        android:id="@+id/sign_in_input_pw"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="30dp"
        android:ems="10"
        android:hint="@string/hint_pw"
        android:inputType="textPassword"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sign_in_input_id" />



    <Button
        android:id="@+id/sign_in_btn_sign_in"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="40dp"
        android:text="@string/btn_sign_in"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sign_in_input_pw" />



</androidx.constraintlayout.widget.ConstraintLayout>